[package]
name = "demo"
version = "0.1.0"
authors = ["Sam Smith <13868670+SamHSmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
wayland-client = {version = "0.25.0", features = ["use_system_lib"]}
wayland-protocols = {version = "0.25.0", features = ["client"]}
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"